# temporary

./: .gitignore  README.md  main.py  memory.db-shm  memory.db-wal  pyproject.toml  tempfile1.py  tempfile1.sh  tempfile2.py  tempfile3.py  utils.py
api/: routes.py
config/: settings.py
docker/: Dockerfile  docker-compose.yml
functions/: file_functions.py  llm_functions.py  memory_functions.py
models/: schemas.py
services/: memory_service.py
temporary/: Cargo.toml
temporary/src/: main.rs
utils/: utils.py
